projects/academic/Compilers/Simples-VM/sintatico.output
Terminals unused in grammar

   T_VAR
   T_TIPO_LISTA_VAR
   T_LISTA_VAR
   T_DECLA_VAR
   T_LISTA_COM


Grammar

    0 $accept: programa $end

    1 @1: %empty

    2 $@2: %empty

    3 programa: cabecalho @1 variaveis T_INICIO lista_comandos $@2 T_FIM

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: %empty
    6          | declaracao_variaveis

    7 declaracao_variaveis: declaracao_variaveis tipo lista_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 lista_variaveis: lista_variaveis T_IDENTIF
   12                | T_IDENTIF

   13 lista_comandos: %empty
   14               | comando lista_comandos

   15 comando: entrada_saida
   16        | repeticao
   17        | selecao
   18        | atribuicao

   19 entrada_saida: leitura
   20              | escrita

   21 leitura: T_LEIA T_IDENTIF

   22 escrita: T_ESCREVA expressao

   23 repeticao: T_ENQTO expressao T_FACA lista_comandos T_FIMENQTO

   24 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   25 atribuicao: T_IDENTIF T_ATRIB expressao

   26 expressao: expressao T_VEZES expressao
   27          | expressao T_DIV expressao
   28          | expressao T_MAIS expressao
   29          | expressao T_MENOS expressao
   30          | expressao T_MAIOR expressao
   31          | expressao T_MENOR expressao
   32          | expressao T_IGUAL expressao
   33          | expressao T_E expressao
   34          | expressao T_OU expressao
   35          | termo
   36          | T_TEXTO

   37 termo: T_IDENTIF
   38      | T_NUMERO
   39      | T_V
   40      | T_F
   41      | T_NAO termo
   42      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PROGRAMA (258) 4
T_INICIO (259) 3
T_FIM (260) 3
T_IDENTIF (261) 4 11 12 21 25 37
T_LEIA (262) 21
T_ESCREVA (263) 22
T_ENQTO (264) 23
T_FACA (265) 23
T_FIMENQTO (266) 23
T_SE (267) 24
T_ENTAO (268) 24
T_SENAO (269) 24
T_FIMSE (270) 24
T_ATRIB (271) 25
T_VEZES (272) 26
T_DIV (273) 27
T_MAIS (274) 28
T_MENOS (275) 29
T_MAIOR (276) 30
T_MENOR (277) 31
T_IGUAL (278) 32
T_E (279) 33
T_OU (280) 34
T_V (281) 39
T_F (282) 40
T_NUMERO (283) 38
T_NAO (284) 41
T_ABRE (285) 42
T_FECHA (286) 42
T_LOGICO (287) 9
T_INTEIRO (288) 10
T_TEXTO (289) 36
T_VAR (290)
T_TIPO_LISTA_VAR (291)
T_LISTA_VAR (292)
T_DECLA_VAR (293)
T_LISTA_COM (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
programa (41)
    on left: 3, on right: 0
@1 (42)
    on left: 1, on right: 3
$@2 (43)
    on left: 2, on right: 3
cabecalho (44)
    on left: 4, on right: 3
variaveis (45)
    on left: 5 6, on right: 3
declaracao_variaveis (46)
    on left: 7 8, on right: 6 7
tipo (47)
    on left: 9 10, on right: 7 8
lista_variaveis (48)
    on left: 11 12, on right: 7 8 11
lista_comandos (49)
    on left: 13 14, on right: 3 14 23 24
comando (50)
    on left: 15 16 17 18, on right: 14
entrada_saida (51)
    on left: 19 20, on right: 15
leitura (52)
    on left: 21, on right: 19
escrita (53)
    on left: 22, on right: 20
repeticao (54)
    on left: 23, on right: 16
selecao (55)
    on left: 24, on right: 17
atribuicao (56)
    on left: 25, on right: 18
expressao (57)
    on left: 26 27 28 29 30 31 32 33 34 35 36, on right: 22 23 24 25
    26 27 28 29 30 31 32 33 34 42
termo (58)
    on left: 37 38 39 40 41 42, on right: 35 41


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho . @1 variaveis T_INICIO lista_comandos $@2 T_FIM

    $default  reduce using rule 1 (@1)

    @1  go to state 6


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    3 programa: cabecalho @1 . variaveis T_INICIO lista_comandos $@2 T_FIM

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

    9 tipo: T_LOGICO .

    $default  reduce using rule 9 (tipo)


State 8

   10 tipo: T_INTEIRO .

    $default  reduce using rule 10 (tipo)


State 9

    3 programa: cabecalho @1 variaveis . T_INICIO lista_comandos $@2 T_FIM

    T_INICIO  shift, and go to state 12


State 10

    6 variaveis: declaracao_variaveis .
    7 declaracao_variaveis: declaracao_variaveis . tipo lista_variaveis

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 6 (variaveis)

    tipo  go to state 13


State 11

    8 declaracao_variaveis: tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 14

    lista_variaveis  go to state 15


State 12

    3 programa: cabecalho @1 variaveis T_INICIO . lista_comandos $@2 T_FIM

    T_IDENTIF  shift, and go to state 16
    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_ENQTO    shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 21
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 13

    7 declaracao_variaveis: declaracao_variaveis tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 14

    lista_variaveis  go to state 29


State 14

   12 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 12 (lista_variaveis)


State 15

    8 declaracao_variaveis: tipo lista_variaveis .
   11 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  shift, and go to state 30

    $default  reduce using rule 8 (declaracao_variaveis)


State 16

   25 atribuicao: T_IDENTIF . T_ATRIB expressao

    T_ATRIB  shift, and go to state 31


State 17

   21 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 32


State 18

   22 escrita: T_ESCREVA . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 40
    termo      go to state 41


State 19

   23 repeticao: T_ENQTO . expressao T_FACA lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 42
    termo      go to state 41


State 20

   24 selecao: T_SE . expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 43
    termo      go to state 41


State 21

    3 programa: cabecalho @1 variaveis T_INICIO lista_comandos . $@2 T_FIM

    $default  reduce using rule 2 ($@2)

    $@2  go to state 44


State 22

   14 lista_comandos: comando . lista_comandos

    T_IDENTIF  shift, and go to state 16
    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_ENQTO    shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 45
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 23

   15 comando: entrada_saida .

    $default  reduce using rule 15 (comando)


State 24

   19 entrada_saida: leitura .

    $default  reduce using rule 19 (entrada_saida)


State 25

   20 entrada_saida: escrita .

    $default  reduce using rule 20 (entrada_saida)


State 26

   16 comando: repeticao .

    $default  reduce using rule 16 (comando)


State 27

   17 comando: selecao .

    $default  reduce using rule 17 (comando)


State 28

   18 comando: atribuicao .

    $default  reduce using rule 18 (comando)


State 29

    7 declaracao_variaveis: declaracao_variaveis tipo lista_variaveis .
   11 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  shift, and go to state 30

    $default  reduce using rule 7 (declaracao_variaveis)


State 30

   11 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 11 (lista_variaveis)


State 31

   25 atribuicao: T_IDENTIF T_ATRIB . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 46
    termo      go to state 41


State 32

   21 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 21 (leitura)


State 33

   37 termo: T_IDENTIF .

    $default  reduce using rule 37 (termo)


State 34

   39 termo: T_V .

    $default  reduce using rule 39 (termo)


State 35

   40 termo: T_F .

    $default  reduce using rule 40 (termo)


State 36

   38 termo: T_NUMERO .

    $default  reduce using rule 38 (termo)


State 37

   41 termo: T_NAO . termo

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38

    termo  go to state 47


State 38

   42 termo: T_ABRE . expressao T_FECHA

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 48
    termo      go to state 41


State 39

   36 expressao: T_TEXTO .

    $default  reduce using rule 36 (expressao)


State 40

   22 escrita: T_ESCREVA expressao .
   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 22 (escrita)


State 41

   35 expressao: termo .

    $default  reduce using rule 35 (expressao)


State 42

   23 repeticao: T_ENQTO expressao . T_FACA lista_comandos T_FIMENQTO
   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    T_FACA   shift, and go to state 58
    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 43

   24 selecao: T_SE expressao . T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE
   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 59
    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 44

    3 programa: cabecalho @1 variaveis T_INICIO lista_comandos $@2 . T_FIM

    T_FIM  shift, and go to state 60


State 45

   14 lista_comandos: comando lista_comandos .

    $default  reduce using rule 14 (lista_comandos)


State 46

   25 atribuicao: T_IDENTIF T_ATRIB expressao .
   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 25 (atribuicao)


State 47

   41 termo: T_NAO termo .

    $default  reduce using rule 41 (termo)


State 48

   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao
   42 termo: T_ABRE expressao . T_FECHA

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57
    T_FECHA  shift, and go to state 61


State 49

   26 expressao: expressao T_VEZES . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 62
    termo      go to state 41


State 50

   27 expressao: expressao T_DIV . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 63
    termo      go to state 41


State 51

   28 expressao: expressao T_MAIS . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 64
    termo      go to state 41


State 52

   29 expressao: expressao T_MENOS . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 65
    termo      go to state 41


State 53

   30 expressao: expressao T_MAIOR . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 66
    termo      go to state 41


State 54

   31 expressao: expressao T_MENOR . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 67
    termo      go to state 41


State 55

   32 expressao: expressao T_IGUAL . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 68
    termo      go to state 41


State 56

   33 expressao: expressao T_E . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 69
    termo      go to state 41


State 57

   34 expressao: expressao T_OU . expressao

    T_IDENTIF  shift, and go to state 33
    T_V        shift, and go to state 34
    T_F        shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37
    T_ABRE     shift, and go to state 38
    T_TEXTO    shift, and go to state 39

    expressao  go to state 70
    termo      go to state 41


State 58

   23 repeticao: T_ENQTO expressao T_FACA . lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 16
    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_ENQTO    shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 71
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 59

   24 selecao: T_SE expressao T_ENTAO . lista_comandos T_SENAO lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 16
    T_LEIA     shift, and go to state 17
    T_ESCREVA  shift, and go to state 18
    T_ENQTO    shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 72
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 60

    3 programa: cabecalho @1 variaveis T_INICIO lista_comandos $@2 T_FIM .

    $default  reduce using rule 3 (programa)


State 61

   42 termo: T_ABRE expressao T_FECHA .

    $default  reduce using rule 42 (termo)


State 62

   26 expressao: expressao . T_VEZES expressao
   26          | expressao T_VEZES expressao .
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    $default  reduce using rule 26 (expressao)


State 63

   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   27          | expressao T_DIV expressao .
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    $default  reduce using rule 27 (expressao)


State 64

   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   28          | expressao T_MAIS expressao .
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50

    $default  reduce using rule 28 (expressao)


State 65

   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   29          | expressao T_MENOS expressao .
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50

    $default  reduce using rule 29 (expressao)


State 66

   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   30          | expressao T_MAIOR expressao .
   31          | expressao . T_MENOR expressao
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52

    $default  reduce using rule 30 (expressao)


State 67

   26 expressao: expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIS expressao
   29          | expressao . T_MENOS expressao
   30          | expressao . T_MAIOR expressao
   31          | expressao . T_MENOR expressao
   31          | expressao T_MENOR expressao .
   32          | expressao . T_IGUAL expressao
   33          | expressao . T_E expressao
   34          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52

